# yolo_depth_ros

./: .gitignore  Dockerfile  README.md  requirements.txt
utils/: gen_color.py  transform.py
yolo_depth_bringup/: CMakeLists.txt  package.xml
yolo_depth_bringup/launch/: yolo_depth.launch.py
yolo_depth_ros/: package.xml  setup.cfg  setup.py
yolo_depth_ros/yolo_depth_ros/: debug_node.py  depth_node.py  goal_pub.py  img_pub.py  tracking_node.py  yolo_depth_node.py  yolo_node.py
yolo_depth_ros/yolo_depth_ros/utils/: gen_color.py  transform.py
yolo_msgs/: CMakeLists.txt  package.xml
yolo_msgs/msg/: Detection.msg
yolo_msgs/srv/: SetClasses.srv
