<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_depth_bringup</name>
  <version>0.0.1</version>
  <description>YOLO and Depth Anything for ROS 2</description>
  <maintainer email="7zjatl7@naver.com"></maintainer>
  <license>GPL-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>transformers</exec_depend>

  <depend>yolo_depth_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>