<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_depth_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="7zjatl7@naver.com">donghoon</maintainer>
  <license>GPL-3.0-only</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>yolo_msgs</depend>

  <exec_depend>torch</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>transformers</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>setuptools</build_depend>
  <exec_depend>setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
